<resources>
    <string name="app_name">CMPE235TeslaApp</string>
    <string name="password_field_default">Password</string>
    <string name="username_field_default">Username</string>
    <string name="sign_in_button">Sign in</string>
    <string name="teslaimage">teslaimage</string>
    <string name="backgroundtest">backgroundtest</string>
    <string name="sign_in_with_tesla">Sign in with Tesla</string>
    <string name="teslaicon">teslaicon</string>
    <string name="tesla_remote_actions">Tesla Remote Actions</string>
    <string name="odometer">Odometer</string>
    <string name="vin_number">VIN Number</string>
    <string name="car_name">Car name</string>
    <string name="battery_level">Battery Level</string>
    <string name="remote_options">Remote Options</string>
    <string name="flash_headlights">Flash Headlights</string>
    <string name="unlock_vehicle">Unlock Vehicle</string>
    <string name="lock_vehicle">Lock Vehicle</string>
    <string name="honk_horn">Honk Horn</string>
    <string name="historic_battery">Historic Battery</string>
</resources>