<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="358dp"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:ems="11"
        android:gravity="center"
        android:hint="@string/password_field_default"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="352dp"
        android:backgroundTint="#EF4747"
        android:text="@string/sign_in_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="358dp"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/rounded_corner"
        android:drawableStart="@drawable/ic_outline_email_24"
        android:drawablePadding="5dp"
        android:ems="11"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/username_field_default"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="87dp"
        android:layout_height="66dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="30dp"
        android:background="@null"
        android:contentDescription="@string/teslaicon"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/test" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="159dp"
        android:layout_height="40dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="22dp"
        android:background="@null"
        android:gravity="center"
        android:text="@string/sign_in_with_tesla"
        android:textColor="#000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>